--- a/BostonAirBnB.ipynb
+++ b/BostonAirBnB.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ----- LOAD THE INPUT FILES ------"
+    " ----- IMPORT LIBRARIES AND LOAD THE INPUT FILES ------"
    ]
   },
   {
@@ -21,6 +21,18 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn import linear_model\n",
+    "from sklearn.model_selection import cross_val_predict\n",
+    "from scipy.stats import pearsonr\n",
+    "\n",
     "\n",
     "calendar = pd.read_csv('./calendar.csv')\n",
     "listings = pd.read_csv('./listings.csv')"
@@ -38,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,13 +60,13 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1308890 entries, 0 to 1308889\n",
       "Data columns (total 4 columns):\n",
-      " #   Column      Non-Null Count    Dtype  \n",
-      "---  ------      --------------    -----  \n",
-      " 0   listing_id  1308890 non-null  int64  \n",
-      " 1   date        1308890 non-null  object \n",
-      " 2   available   1308890 non-null  object \n",
-      " 3   price       643037 non-null   float64\n",
-      "dtypes: float64(1), int64(1), object(2)\n",
+      " #   Column      Non-Null Count    Dtype \n",
+      "---  ------      --------------    ----- \n",
+      " 0   listing_id  1308890 non-null  int64 \n",
+      " 1   date        1308890 non-null  object\n",
+      " 2   available   1308890 non-null  object\n",
+      " 3   price       643037 non-null   object\n",
+      "dtypes: int64(1), object(3)\n",
       "memory usage: 39.9+ MB\n",
       "None \n",
       "\n",
@@ -74,10 +86,10 @@
     {
      "data": {
       "text/plain": [
-       "\" Observation:\\n   1)  calendar dataset has 4 columns and 1,308,890 rows \\n   2)  contains 1 year data from 06-09-2016 to 05-09-2017\\n   3)  1 numeric variable and 3 categorical variables\\n   4)  'price' is not numeric datatype as it contains $ sign\\n   5)  'price' contains 50.87% NaN values\\n   6)  there is no 'price' where available = 'f' (properties were booked)\\n   7)  the price is listed where properties were available\\n   8)  occupancy rate is 50.87%\\n   \""
+       "\" Observation:\\n   1)  calendar dataset has 4 columns and 1,308,890 rows \\n   2)  contains 1 year data from 06-09-2016 to 05-09-2017\\n   3)  1 numeric variable and 3 categorical variables\\n   4)  'price' is not numeric datatype as it contains $ sign\\n   5)  'price' contains 50.87% NaN values\\n   6)  there is no 'price' where available = 'f' (properties were booked)\\n   7)  the price is listed where properties were available\\n   8)  occupancy rate is 50.87%\\n  \""
       ]
      },
-     "execution_count": 51,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +116,7 @@
     "\n",
     "calendar.head(10)\n",
     "\n",
-    "''' Observation:\n",
+    "\"\"\" Observation:\n",
     "   1)  calendar dataset has 4 columns and 1,308,890 rows \n",
     "   2)  contains 1 year data from 06-09-2016 to 05-09-2017\n",
     "   3)  1 numeric variable and 3 categorical variables\n",
@@ -113,7 +125,7 @@
     "   6)  there is no 'price' where available = 'f' (properties were booked)\n",
     "   7)  the price is listed where properties were available\n",
     "   8)  occupancy rate is 50.87%\n",
-    "   '''"
+    "  \"\"\""
    ]
   },
   {
@@ -229,7 +241,7 @@
       "memory usage: 2.6+ MB\n",
       "None \n",
       "\n",
-      "{'neighbourhood_group_cleansed', 'license', 'jurisdiction_names', 'square_feet', 'notes', 'monthly_price', 'has_availability', 'security_deposit', 'weekly_price'} \n",
+      "{'neighbourhood_group_cleansed', 'security_deposit', 'jurisdiction_names', 'has_availability', 'weekly_price', 'monthly_price', 'license', 'notes', 'square_feet'} \n",
       "\n",
       "         id                            listing_url       scrape_id  \\\n",
       "0  12147973  https://www.airbnb.com/rooms/12147973  20160906204935   \n",
@@ -329,12 +341,12 @@
     "\n",
     "print(listings.head(5))\n",
     "\n",
-    "''' Observation:\n",
+    "\"\"\" Observation:\n",
     "   1)  listings dataset has 95 columns and 3,584 rows \n",
     "   2)  33 numeric variables and 62 categorical variables\n",
     "   3)  'price' is not numeric datatype as it contains $ sign\n",
     "\n",
-    "   '''"
+    "\"\"\""
    ]
   },
   {
@@ -416,7 +428,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fd417bd7e20>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fb165e97a60>"
       ]
      },
      "execution_count": 9,
@@ -437,8 +449,6 @@
    "source": [
     "# create chart showing occupancy by Months and by Property Types\n",
     "\n",
-    "import seaborn as sns\n",
-    "\n",
     "sns.set_style(\"ticks\")\n",
     "ax = sns.displot(df_unavail, x=\"month\", hue=\"property_type\", multiple=\"stack\", stat=\"count\",height=10, discrete=True , aspect=1.5 )\n",
     "ax.set(title=\"Occupancy by Months and by Property Types\")"
@@ -456,30 +466,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "month  property_type  \n",
-       "1      Apartment          44.697110\n",
-       "       Bed & Breakfast    18.017309\n",
-       "       Boat                8.333333\n",
-       "       Camper/RV                NaN\n",
-       "       Condominium        53.107108\n",
-       "                            ...    \n",
-       "12     House              37.400987\n",
-       "       Loft               61.207610\n",
-       "       Other              27.893738\n",
-       "       Townhouse          47.431302\n",
-       "       Villa              83.333333\n",
-       "Name: date, Length: 156, dtype: float64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# count of bookings by months and by property_type \n",
     "    \n",
@@ -515,7 +502,6 @@
    ],
    "source": [
     "# Create a chart showing the average price by month and week days\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "f = plt.figure(figsize=(25, 15))\n",
     "gs = f.add_gridspec(2, 2)\n",
@@ -1007,7 +993,6 @@
    ],
    "source": [
     "# rescale explanatory numeric variables\n",
-    "import numpy as np\n",
     "\n",
     "for feature in num_list:\n",
     "    shift = df_model[feature].mean()\n",
@@ -1212,40 +1197,10 @@
    "source": [
     "# split dataset for cross validation, 20% for testing and 80% for training\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "Y = df_knn['price']\n",
     "X = df_knn.drop('price', axis=1)\n",
     "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.20, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'from sklearn.cluster import KMeans\\nscore = []\\nrange_value = range(1,20)\\nfor i in range_value:\\n    kmeans = KMeans(n_clusters = i)\\n    kmeans.fit(X_train)\\n    score.append(kmeans.inertia_) '"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# this elbow method can be used to determine the optimum number of neighbours, however given the huge volumn, it takes \n",
-    "# forever to complete, so I skipped this step and experiment with n-neigbour = 3, 5, 7\n",
-    "'''from sklearn.cluster import KMeans\n",
-    "score = []\n",
-    "range_value = range(1,20)\n",
-    "for i in range_value:\n",
-    "    kmeans = KMeans(n_clusters = i)\n",
-    "    kmeans.fit(X_train)\n",
-    "    score.append(kmeans.inertia_) '''"
    ]
   },
   {
@@ -1258,41 +1213,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'from sklearn.cluster import KMeans\\nscore = []\\nrange_value = range(1,20)\\nfor i in range_value:\\n    kmeans = KMeans(n_clusters = i)\\n    kmeans.fit(X_train)\\n    score.append(kmeans.inertia_) '"
+       "' from sklearn.cluster import KMeans\\nscore = []\\nrange_value = range(1,20)\\nfor i in range_value:\\n    kmeans = KMeans(n_clusters = i)\\n    kmeans.fit(X_train)\\n    score.append(kmeans.inertia_) '"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# this elbow method can be used to determine the optimum number of neighbours, however given the huge volumn, it takes \n",
-    "# forever to complete, so I skipped this step and experiment with n-neigbour = 3, 5, 7\n",
-    "'''from sklearn.cluster import KMeans\n",
+    "# this elbow method can be used to determine the optimum number of neighbours, however given the huge volumn, \n",
+    "#it takes forever to complete, so I skipped this step and experiment with n-neigbour = 3, 5, 7\n",
+    "\n",
+    "\"\"\" from sklearn.cluster import KMeans\n",
     "score = []\n",
     "range_value = range(1,20)\n",
     "for i in range_value:\n",
     "    kmeans = KMeans(n_clusters = i)\n",
     "    kmeans.fit(X_train)\n",
-    "    score.append(kmeans.inertia_) '''"
+    "    score.append(kmeans.inertia_) \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train the model, after experiment with different values, n_neibhours = 3 give the most accurate prediction\n",
     "\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
     "clf = KNeighborsRegressor(n_neighbors=3)\n",
     "\n",
     "clf.fit(X_train, Y_train)\n",
@@ -1309,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1510,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1581,9 +1536,6 @@
    "source": [
     "## compute Pearson and R2_score\n",
     "\n",
-    "from sklearn.metrics import r2_score\n",
-    "from scipy.stats import pearsonr\n",
-    "\n",
     "corr, _ = pearsonr(Y_test, knr_Y_pred)\n",
     "print('Pearsons correlation: %.3f' % corr)\n",
     "print ('R2-score: ', r2_score(Y_test, knr_Y_pred))\n",
@@ -1594,17 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import r2_score\n",
-    "from scipy.stats import pearsonr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1555,7 @@
        "Text(0, 0.5, 'Predicted')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1630,9 +1572,6 @@
    ],
    "source": [
     "# model validation using sklearn cross_val_predict\n",
-    "\n",
-    "from sklearn import linear_model\n",
-    "from sklearn.model_selection import cross_val_predict\n",
     "\n",
     "lr = linear_model.LinearRegression()\n",
     "y = knr_result.price\n",
@@ -1658,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1614,6 @@
    "source": [
     "# build and train the model\n",
     "\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
     "rfg = RandomForestRegressor(n_estimators=100,random_state=42,\n",
     "    max_depth=10,\n",
     "    min_samples_leaf=15,\n",
@@ -1694,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1762,28 +1700,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'SUMMARY:\\n\\n1) September has the highest bookings, following is October. Feb has the lowest bookings. \\n2) Apartment is the most demanded renting property, following by house and then condominium\\n3) Rental price is lowest in February and March, it gradually increases and reaches the peak in September and October.\\n4) Friday and Saturday prices, in general are more expensive than other days of the week\\n5) KNN Regression model is slightly more accurate in predicting prices, but Random Forest Regression provides important features had the most impact on determining the rental prices. '"
+       "' SUMMARY:\\n\\n1) September has the highest bookings, following is October. Feb has the lowest bookings. \\n2) Apartment is the most demanded renting property, following by house and then condominium\\n3) Rental price is lowest in February and March, it gradually increases and reaches the peak in September and October.\\n4) Friday and Saturday prices, in general are more expensive than other days of the week\\n5) KNN Regression model is slightly more accurate in predicting prices, but Random Forest Regression provides important features had the most impact on determining the rental prices. \\n'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''SUMMARY:\n",
+    "\"\"\" SUMMARY:\n",
     "\n",
     "1) September has the highest bookings, following is October. Feb has the lowest bookings. \n",
     "2) Apartment is the most demanded renting property, following by house and then condominium\n",
     "3) Rental price is lowest in February and March, it gradually increases and reaches the peak in September and October.\n",
     "4) Friday and Saturday prices, in general are more expensive than other days of the week\n",
-    "5) KNN Regression model is slightly more accurate in predicting prices, but Random Forest Regression provides important features had the most impact on determining the rental prices. '''"
+    "5) KNN Regression model is slightly more accurate in predicting prices, but Random Forest Regression provides important features had the most impact on determining the rental prices. \n",
+    "\"\"\""
    ]
   },
   {
