replace docstrings with markdown

--- a/BostonAirBnB.ipynb
+++ b/BostonAirBnB.ipynb
@@ -116,16 +116,15 @@
     "\n",
     "calendar.head(10)\n",
     "\n",
-    "\"\"\" Observation:\n",
-    "   1)  calendar dataset has 4 columns and 1,308,890 rows \n",
-    "   2)  contains 1 year data from 06-09-2016 to 05-09-2017\n",
-    "   3)  1 numeric variable and 3 categorical variables\n",
-    "   4)  'price' is not numeric datatype as it contains $ sign\n",
-    "   5)  'price' contains 50.87% NaN values\n",
-    "   6)  there is no 'price' where available = 'f' (properties were booked)\n",
-    "   7)  the price is listed where properties were available\n",
-    "   8)  occupancy rate is 50.87%\n",
-    "  \"\"\""
+    "# OBSERVATION:\n",
+    "#   1)  calendar dataset has 4 columns and 1,308,890 rows \n",
+    "#   2)  contains 1 year data from 06-09-2016 to 05-09-2017\n",
+    "#   3)  1 numeric variable and 3 categorical variables\n",
+    "#   4)  'price' is not numeric datatype as it contains $ sign\n",
+    "#   5)  'price' contains 50.87% NaN values\n",
+    "#   6)  there is no 'price' where available = 'f' (properties were booked)\n",
+    "#   7)  the price is listed where properties were available\n",
+    "#   8)  occupancy rate is 50.87%\n"
    ]
   },
   {
@@ -241,7 +240,7 @@
       "memory usage: 2.6+ MB\n",
       "None \n",
       "\n",
-      "{'neighbourhood_group_cleansed', 'security_deposit', 'jurisdiction_names', 'has_availability', 'weekly_price', 'monthly_price', 'license', 'notes', 'square_feet'} \n",
+      "{'notes', 'jurisdiction_names', 'security_deposit', 'weekly_price', 'has_availability', 'license', 'neighbourhood_group_cleansed', 'monthly_price', 'square_feet'} \n",
       "\n",
       "         id                            listing_url       scrape_id  \\\n",
       "0  12147973  https://www.airbnb.com/rooms/12147973  20160906204935   \n",
@@ -319,7 +318,7 @@
     {
      "data": {
       "text/plain": [
-       "\" Observation:\\n   1)  listings dataset has 95 columns and 3,584 rows \\n   2)  33 numeric variables and 62 categorical variables\\n   3)  'price' is not numeric datatype as it contains $ sign\\n\\n   \""
+       "\" Observation:\\n   1)  listings dataset has 95 columns and 3,584 rows \\n   2)  33 numeric variables and 62 categorical variables\\n   3)  'price' is not numeric datatype as it contains $ sign\\n\\n\""
       ]
      },
      "execution_count": 3,
@@ -341,12 +340,10 @@
     "\n",
     "print(listings.head(5))\n",
     "\n",
-    "\"\"\" Observation:\n",
-    "   1)  listings dataset has 95 columns and 3,584 rows \n",
-    "   2)  33 numeric variables and 62 categorical variables\n",
-    "   3)  'price' is not numeric datatype as it contains $ sign\n",
-    "\n",
-    "\"\"\""
+    "# Observation:\n",
+    "#   1)  listings dataset has 95 columns and 3,584 rows \n",
+    "#   2)  33 numeric variables and 62 categorical variables\n",
+    "#   3)  'price' is not numeric datatype as it contains $ sign\n"
    ]
   },
   {
@@ -428,7 +425,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fb165e97a60>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fc4376bc4f0>"
       ]
      },
      "execution_count": 9,
@@ -1212,32 +1209,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' from sklearn.cluster import KMeans\\nscore = []\\nrange_value = range(1,20)\\nfor i in range_value:\\n    kmeans = KMeans(n_clusters = i)\\n    kmeans.fit(X_train)\\n    score.append(kmeans.inertia_) '"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# this elbow method can be used to determine the optimum number of neighbours, however given the huge volumn, \n",
-    "#it takes forever to complete, so I skipped this step and experiment with n-neigbour = 3, 5, 7\n",
+    "The below elbow method can be used to determine the optimum number of neighbours, however given the huge volumn, \n",
+    "it takes forever to complete, so I skipped this step and experimented with n-neigbour = 3, 5, 7\n",
     "\n",
-    "\"\"\" from sklearn.cluster import KMeans\n",
+    "from sklearn.cluster import KMeans\n",
     "score = []\n",
     "range_value = range(1,20)\n",
     "for i in range_value:\n",
     "    kmeans = KMeans(n_clusters = i)\n",
     "    kmeans.fit(X_train)\n",
-    "    score.append(kmeans.inertia_) \"\"\""
+    "    score.append(kmeans.inertia_) "
    ]
   },
   {
@@ -1671,7 +1655,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1699,30 +1685,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' SUMMARY:\\n\\n1) September has the highest bookings, following is October. Feb has the lowest bookings. \\n2) Apartment is the most demanded renting property, following by house and then condominium\\n3) Rental price is lowest in February and March, it gradually increases and reaches the peak in September and October.\\n4) Friday and Saturday prices, in general are more expensive than other days of the week\\n5) KNN Regression model is slightly more accurate in predicting prices, but Random Forest Regression provides important features had the most impact on determining the rental prices. \\n'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\" SUMMARY:\n",
+    "SUMMARY:\n",
     "\n",
     "1) September has the highest bookings, following is October. Feb has the lowest bookings. \n",
     "2) Apartment is the most demanded renting property, following by house and then condominium\n",
-    "3) Rental price is lowest in February and March, it gradually increases and reaches the peak in September and October.\n",
+    "3) Rental price is lowest in February and March, then gradually increases and reaches the peak in September and October.\n",
     "4) Friday and Saturday prices, in general are more expensive than other days of the week\n",
-    "5) KNN Regression model is slightly more accurate in predicting prices, but Random Forest Regression provides important features had the most impact on determining the rental prices. \n",
-    "\"\"\""
+    "5) KNN Regression model is slightly more accurate in predicting prices, but Random Forest Regression provides important features had the most impact on determining the rental prices. \n"
    ]
   },
   {
